update ignite